// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section copy operators Deep section is correctly merged 1`] = `
Object {
  "elements": Array [
    Object {
      "elements": Array [
        Object {
          "key": "value_1",
          "type": "field",
          "value": "default",
        },
      ],
      "key": "a",
      "type": "section",
    },
    Object {
      "elements": Array [
        Object {
          "key": "value_2",
          "type": "field",
          "value": "default",
        },
        Object {
          "key": "value_1",
          "type": "field",
          "value": "deep",
        },
      ],
      "key": "b",
      "type": "section",
    },
  ],
  "key": "deep",
  "type": "section",
}
`;

exports[`Section copy operators Default section is correctly initialized 1`] = `
Object {
  "elements": Array [
    Object {
      "elements": Array [
        Object {
          "key": "value_1",
          "type": "field",
          "value": "default",
        },
      ],
      "key": "a",
      "type": "section",
    },
    Object {
      "elements": Array [
        Object {
          "key": "value_1",
          "type": "field",
          "value": "default",
        },
        Object {
          "key": "value_2",
          "type": "field",
          "value": "default",
        },
      ],
      "key": "b",
      "type": "section",
    },
  ],
  "key": "default",
  "type": "section",
}
`;

exports[`Section copy operators Shallow section is correctly merged 1`] = `
Object {
  "elements": Array [
    Object {
      "elements": Array [
        Object {
          "key": "value_1",
          "type": "field",
          "value": "default",
        },
      ],
      "key": "a",
      "type": "section",
    },
    Object {
      "elements": Array [
        Object {
          "key": "value_1",
          "type": "field",
          "value": "shallow",
        },
      ],
      "key": "b",
      "type": "section",
    },
  ],
  "key": "shallow",
  "type": "section",
}
`;
